typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck6.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck6.ts:2:17
  |
2 | function* g1(): number { }
  |                 ^^^^^^

